--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 .navbar{
     position: fixed;
     width: 100%;
+    z-index: 999;
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
@@ -135,9 +136,265 @@
 
 /******************************/
 
-@media (max-width: 1104px){
+section{
+    padding: 100px 0;
+}
+
+.about, .services, .skills{
+    font-family: 'Poppins', sans-serif;   
+}
+
+.about .about-content, .services .serv-content, .skills .skills-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+section .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+section .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+
+section .title::after{
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: rgb(125, 1, 170);
+    padding: 5px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+
+/******************************/
+
+.about .title::after{
+    content: "Who I am";
+}
+
+.about .about-content .left{
+    width: 45%; 
+}
+
+.about .about-content .left img{
+    height: 350px;
+    width: 350px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.about .about-content .right{
+    width: 55%; 
+}
+
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+
+}
+
+.about .about-content .right .text span{
+    color: rgb(125, 1, 170);
+}
+
+.about .about-content .right p{
+    text-align: justify;
+}
+
+.about .about-content .right a{
+    display: inline-block;
+    background: rgb(125, 1, 170);
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 24px;
+    border: 4px solid rgb(125, 1, 170);
+    transition: all 0.3s ease;
+}
+
+.about .about-content .right a:hover{
+    color: rgb(125, 1, 170);
+    background: none;
+}
+
+/******************************/
+
+.services{
+    color: #fff;
+    background: #111;
+}
+
+.services .title::before{
+    background: #fff;
+}
+
+.services .title::after{
+    color: rgb(0, 255, 247);
+    background: #111;
+    content: "What I Provide";
+}
+
+.services .serv-content .card{
+    width: calc(33% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.services .serv-content .card:hover{
+    background: rgb(18, 199, 193);
+    color: #222;
+}
+
+.services .serv-content .card .box{
+    transition: all 0.3s ease;
+}
+
+.services .serv-content .card:hover .box{
+    transform: scale(1.05);
+}
+
+.services .serv-content .card i{
+    font-size: 50px;
+    color:  rgb(18, 199, 193);
+    transition: color 0.3s ease;
+}
+
+.services .serv-content .card:hover i{
+    background: rgb(18, 199, 193);
+    color: #222;
+}
+
+.services .serv-content .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+
+}
+
+/******************************/
+
+.skills .title::after{
+    content: "What I Know";
+}
+
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
+
+.skills .skills-content .left .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .left p{
+    text-align: justify;
+}
+
+.skills .skills-content .left a{
+    display: inline-block;
+    background: rgb(125, 1, 170);
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 24px;
+    border: 3px solid rgb(125, 1, 170);
+    transition: all 0.3s ease;
+}
+
+.skills .skills-content .left a:hover{
+    color: rgb(125, 1, 170);
+    background: none;
+}
+
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+
+.skills .skills-content .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: rgb(125, 1, 170);
+}
+
+.skills-content .right .html::before{
+    width: 10%;
+}
+.skills-content .right .css::before{
+    width: 5%;
+}
+.skills-content .right .js::before{
+    width: 3%;
+}
+.skills-content .right .php::before{
+    width: 0%;
+}
+.skills-content .right .mysql::before{
+    width: 20%;
+}
+
+
+
+/******************************/
+
+@media (max-width: 1300px){
     .home .max-width{
         margin-left: 0px;
+    }
+}
+
+@media (max-width: 1104px){
+    .about .about-content .left img{
+        height: 300px;
+        width: 300px;
     }
 }
 
@@ -197,6 +454,34 @@
         padding: 10px 30px;
     }
 
+    .max-width{
+        max-width: 800px;
+    }
+
+    .about .about-content .column{
+        width: 100%;
+    }
+
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+
+    .about .about-content .right{
+        flex: 100%;
+    }
+
+    .services .serv-content .card{
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
+
+    .skills .skills-content .column{
+        width: 100%;
+        margin-bottom: 35px;
+    }
+
 }
 
 @media (max-width: 690px){
@@ -215,6 +500,12 @@
     .home .home-content a{
         font-size: 15px;
     }
+
+    .services .serv-content .card{
+        width: 100%;
+    }
+
+
 }
 
 @media (max-width: 500px){
