--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@
 
 .home{
     display: flex;
-    background: url("images/es.jpg") no-repeat center;
+    background: url("images/mybgpic.jpg") no-repeat center;
     height: 100vh;
     background-size: cover;
     background-attachment: fixed;
@@ -151,7 +151,7 @@
     padding: 12px 36px;
     margin-top: 20px;
     border-radius: 24px;
-    border: 4px solid rgb(125, 1, 170);
+    border: 3px solid rgb(125, 1, 170);
     transition: all 0.3s ease;
 }
 
@@ -254,7 +254,7 @@ section .title::after{
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 24px;
-    border: 4px solid rgb(125, 1, 170);
+    border: 3px solid rgb(125, 1, 170);
     transition: all 0.3s ease;
 }
 
